@@ -12,6 +12,11 @@ namespace Ribbons
 			Default, Hover, Pressed
 		}
 		
+		public enum MenuItemState
+		{
+			Default, HilightAction, HilightMenu, Hilight
+		}
+		
 		protected ColorScheme colorScheme = new ColorScheme ();
 		
 		internal void DrawApplicationMenu (Context cr, Rectangle r, ApplicationMenu w)
@@ -20,46 +25,30 @@ namespace Ribbons
 			cr.Paint ();
 		}
 		
-		internal void DrawApplicationMenuItem (Context cr, Rectangle bodyAllocation, ButtonState state, double roundSize, double lineWidth, double arrowSize, double arrowPadding, bool drawSeparator, ApplicationMenuItem widget)
+		internal void DrawApplicationMenuItem (Context cr, Rectangle bodyAllocation, MenuItemState state, double roundSize, double lineWidth, double arrowSize, double arrowPadding, bool drawSeparator, ApplicationMenuItem widget)
 		{
 			double lineWidth05 = lineWidth / 2;
 			double lineWidth15 = lineWidth05 * 3;
+			double separatorX = bodyAllocation.X + bodyAllocation.Width - 2 * lineWidth - arrowSize - 2 * arrowPadding;
 			
 			cr.LineWidth = lineWidth;
 			
-			if(state == ButtonState.Pressed || state == ButtonState.Hover)
+			if(state != MenuItemState.Default)
 			{
 				LinearGradient bodyPattern, innerBorderPattern;
 				Color borderColor;
 				
-				if(state == ButtonState.Pressed)
-				{
-					bodyPattern = new LinearGradient (bodyAllocation.X, bodyAllocation.Y, bodyAllocation.X, bodyAllocation.Y + bodyAllocation.Height);
-					bodyPattern.AddColorStopRgb (0.0, new Color (0.996, 0.847, 0.667));
-					bodyPattern.AddColorStopRgb (0.37, new Color (0.984, 0.710, 0.396));
-					bodyPattern.AddColorStopRgb (0.43, new Color (0.980, 0.616, 0.204));
-					bodyPattern.AddColorStopRgb (1.0, new Color (0.992, 0.933, 0.667));
-					
-					innerBorderPattern = new LinearGradient (bodyAllocation.X, bodyAllocation.Y, bodyAllocation.X + bodyAllocation.Width, bodyAllocation.Y + bodyAllocation.Height);
-					innerBorderPattern.AddColorStop (0.0, new Color (0.876, 0.718, 0.533, 1));
-					innerBorderPattern.AddColorStop (1.0, new Color (0.876, 0.718, 0.533, 0));
-					
-					borderColor = new Color (0.671, 0.631, 0.549);
-				}
-				else
-				{
-					bodyPattern = new LinearGradient (bodyAllocation.X, bodyAllocation.Y, bodyAllocation.X, bodyAllocation.Y + bodyAllocation.Height);
-					bodyPattern.AddColorStopRgb (0.0, new Color (1, 0.996, 0.890));
-					bodyPattern.AddColorStopRgb (0.37, new Color (1, 0.906, 0.592));
-					bodyPattern.AddColorStopRgb (0.43, new Color (1, 0.843, 0.314));
-					bodyPattern.AddColorStopRgb (1.0, new Color (1, 0.906, 0.588));
-					
-					innerBorderPattern = new LinearGradient (bodyAllocation.X, bodyAllocation.Y, bodyAllocation.X + bodyAllocation.Width, bodyAllocation.Y + bodyAllocation.Height);
-					innerBorderPattern.AddColorStop (0.0, new Color (1, 1, 0.969, 1));
-					innerBorderPattern.AddColorStop (1.0, new Color (1, 1, 0.969, 0));
-					
-					borderColor = new Color (0.824, 0.753, 0.553);
-				}
+				bodyPattern = new LinearGradient (bodyAllocation.X, bodyAllocation.Y, bodyAllocation.X, bodyAllocation.Y + bodyAllocation.Height);
+				bodyPattern.AddColorStopRgb (0.0, new Color (1, 0.996, 0.890));
+				bodyPattern.AddColorStopRgb (0.37, new Color (1, 0.906, 0.592));
+				bodyPattern.AddColorStopRgb (0.43, new Color (1, 0.843, 0.314));
+				bodyPattern.AddColorStopRgb (1.0, new Color (1, 0.906, 0.588));
+				
+				innerBorderPattern = new LinearGradient (bodyAllocation.X, bodyAllocation.Y, bodyAllocation.X + bodyAllocation.Width, bodyAllocation.Y + bodyAllocation.Height);
+				innerBorderPattern.AddColorStop (0.0, new Color (1, 1, 0.969, 1));
+				innerBorderPattern.AddColorStop (1.0, new Color (1, 1, 0.969, 0));
+				
+				borderColor = new Color (0.824, 0.753, 0.553);
 				
 				double x0 = bodyAllocation.X + lineWidth05, y0 = bodyAllocation.Y + lineWidth05;
 				double x1 = bodyAllocation.X + bodyAllocation.Width - lineWidth05, y1 = bodyAllocation.Y + bodyAllocation.Height - lineWidth05;
@@ -73,6 +62,27 @@ namespace Ribbons
 				cr.Pattern = bodyPattern;
 				cr.Fill ();
 				bodyPattern.Destroy ();
+				
+				if(state == MenuItemState.HilightAction)
+				{
+					cr.Color = new Color (1, 1, 1, 0.7);
+					cr.MoveTo (x0 + roundSize, y0);
+					cr.LineTo (separatorX, y0);
+					cr.LineTo (separatorX, y1);
+					cr.Arc (x0 + roundSize, y1 - roundSize, roundSize, 0.5*Math.PI, Math.PI);
+					cr.Arc (x0 + roundSize, y0 + roundSize, roundSize, Math.PI, 1.5*Math.PI);
+					cr.Fill ();
+				}
+				else if(state == MenuItemState.HilightMenu)
+				{
+					cr.Color = new Color (1, 1, 1, 0.7);
+					cr.MoveTo (separatorX, y0);
+					cr.Arc (x1 - roundSize, y0 + roundSize, roundSize, 1.5*Math.PI, 0);
+					cr.Arc (x1 - roundSize, y1 - roundSize, roundSize, 0, 0.5*Math.PI);
+					cr.LineTo (separatorX, y1);
+					cr.LineTo (separatorX, y0);
+					cr.Fill ();
+				}
 				
 				x0 = bodyAllocation.X + lineWidth15; y0 = bodyAllocation.Y + lineWidth15;
 				x1 = bodyAllocation.X + bodyAllocation.Width - lineWidth15; y1 = bodyAllocation.Y + bodyAllocation.Height - lineWidth15;
@@ -109,7 +119,7 @@ namespace Ribbons
 			{
 				double x, y;
 				
-				x = bodyAllocation.X + bodyAllocation.Width - 2 * lineWidth - arrowSize - 2 * arrowPadding;
+				x = separatorX;
 				y = bodyAllocation.Y + (bodyAllocation.Height - arrowSize) / 2.0;
 				
 				if(drawSeparator)
